--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,52 @@
-/* место для вашего кода */
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 90px 50px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+}
+
+.header__logo-image {
+  height: 105px;
+  width: 148px;
+}
+
+.address {
+  max-width: 240px;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.35;
+  text-underline-offset: 5px;
+}
+
+.header__address {
+  justify-self: end;
+  padding-right: 36px;
+}
+
+.address__links-list {
+  list-style: none;
+}
