--- a/styles/style.css
+++ b/styles/style.css
@@ -50,13 +50,9 @@
   padding-bottom: 4px;
 }
 
-.address__links-list {
-  list-style: none;
-}
-
 .cover {
   position: relative;
-  z-index: -1;
+  z-index: 0;
   padding-right: 50px;
   padding-bottom: 50px;
   padding-left: 50px;
@@ -69,7 +65,7 @@
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -89,16 +85,16 @@
 }
 
 .aligned-text {
-  z-index: 1;
+  z-index: 2;
 }
 
 .aligned-text_center {
-  z-index: 1;
+  z-index: 2;
   text-align: center;
 }
 
 .aligned-text_right {
-  z-index: 1;
+  z-index: 2;
   text-align: right;
 }
 
@@ -113,7 +109,7 @@
 }
 
 .cover__description-text {
-  z-index: 1;
+  z-index: 2;
   padding-top: 14px;
   color: #fff;
   font-weight: 400;
@@ -124,7 +120,7 @@
 }
 
 .bet-button {
-  z-index: 1;
+  z-index: 2;
   border: 1px solid #fff;
   padding: 12px 32px 11px 31px;
   color: #fff;
@@ -133,6 +129,7 @@
   text-align: center;
   text-transform: uppercase;
   background: transparent;
+  cursor: pointer;
 }
 
 .lots {
@@ -193,31 +190,24 @@
   line-height: 120%;
 }
 
-.card_type_film {
+.card_background {
   position: relative;
-  z-index: -1;
-  background-image: url(../images/card-lot-01.jpg);
+  z-index: 0;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  position: relative;
-  z-index: -1;
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .card_type_picture {
-  position: relative;
-  z-index: -1;
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .lots__look-more-link {
